<resources>
    <string name="app_name">PeligrApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pepito Pérez</string>
    <string name="nav_header_subtitle">pepito_perez@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_home">PeligrApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settigns_1">Sonido de notificación</string>
    <string name="settings_2">Radio de Notificación</string>
    <string name="profile_image">Profile Image</string>
    <string name="LogOut_Button">Cerrar Sesión</string>
    <string name="detailsButton">Detalles</string>
    <string name="RecentReportName">Reporte más reciente</string>
    <string name="peligrapp_logo">PeligrApp Logo</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="risk_description">Descripción del riesgo, Qué tan grave es?, Qué vehículos deben tener más cuidado?</string>
    <string name="risk_placeholder">Risk_placeholder</string>
    <string name="confirm_risk">confirmar riesgo</string>
    <string name="unconfim_risk">riesgo inexitente</string>
</resources>