<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg"
    android:orientation="vertical"
    tools:context=".PopReportActivity">

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center"
        android:contentDescription="@string/risk_placeholder"
        app:srcCompat="@drawable/ic_danger_photo_placeholder"
        tools:srcCompat="@drawable/ic_danger_photo_placeholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:justificationMode="inter_word"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        android:text="@string/risk_description"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/primaryTextColor"
        android:text="@string/confirm_risk"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/primaryTextColor"
        android:textColor="@color/secondaryColor"
        android:textSize="20sp"
        android:text="@string/unconfim_risk"/>


</androidx.appcompat.widget.LinearLayoutCompat>