<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="130dp"
                android:layout_height="142dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/profile_image"
                app:srcCompat="@drawable/ic_android_placeholder_108">

            </ImageView>
            <TextView
                android:id="@+id/textProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/nav_header_title">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_header_subtitle"
                android:textColor="#A1887F"
                android:textSize="20sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/detailsButton"
                    android:backgroundTint="@color/primaryLightColor"
                    android:textColor="@color/secondaryTextColor"
                    >

                </Button>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/LogOut_Button"
                    android:backgroundTint="@color/secondaryLightColor"
                    android:textColor="@color/secondaryTextColor">

                </Button>

            </LinearLayout>

        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/peligrapp_logo"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:srcCompat="@drawable/ic_danger" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textSize="21sp"
                    android:text="@string/RecentReportName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:textSize="11sp"
                    android:text="@string/dd_mm_aaaa"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>